@@ -27,14 +27,10 @@
 #error You must define GETTEXT_PACKAGE before including gi18n-lib.h.
 #endif
 
-#define _(String) dgettext (GETTEXT_PACKAGE, String)
-#define Q_(String) g_strip_context ((String), dgettext (GETTEXT_PACKAGE, String))
-#ifdef gettext_noop
-#define N_(String) gettext_noop (String)
-#else
+#define  _(String) dgettext (GETTEXT_PACKAGE, String)
+#define Q_(String) g_dpgettext (GETTEXT_PACKAGE, String, NULL)
 #define N_(String) (String)
-#endif
+#define C_(Context,String) g_dpgettext (GETTEXT_PACKAGE, Context "\004" String, String)
+
 
 #endif  /* __G_I18N_LIB_H__ */
-
-
