@@ -1,3 +1,8 @@
+2007-11-23  Matthias Clasen <mclasen@redhat.com>
+
+	* glib/tmpl/i18n.sgml:
+	* glib/glib-sections.txt: Add g_dpgettext(), C_()
+
 2007-11-18  Matthias Clasen <mclasen@redhat.com>
 
 	* glib/tmpl/option.sgml: Update the example to demonstrate
